--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Xiuhua Wang Academic Resume</title>
+        <title>Xian Shuai's Website</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#background">Education Background</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Research Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#employment">Employment</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#employment">Employment</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#teaching">Teaching Assistant</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
@@ -41,14 +41,22 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Xiuhua
-                        <span class="text-primary">Wang</span>
+                        Xian Shuai
+                        <span class="text-primary">帅先</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        Rm 725-726, SHB, CUHK · Hong Kong · (852) 62293531 ·
-                        <a href="mailto:name@email.com">xhwang AT link DOT cuhk DOT edu DOT hk</a>
+                    <div class="lead mb-5">
+                        Room 727, SHB, CUHK · Hong Kong · (852) 54265745 ·
+                        <a href="mailto:shuaixiannee@hotmail.com">shuaixiannee@hotmail.com</a>
                     </div>
-                    <p class="lead mb-5">I received my Ph.D. degree from the department of information engineering, the Chinese University of Hong Kong, under the supervision of Professor Sherman S.M. Chow in 2020. I received my master's degree from the department of computer science, the City University of Hong Kong in 2014. </p>
+                    <p class="lead mb-5">I received my Bachelor degree from School of Physical Sciences, University of Science and Technology of China (USTC). Now, I am a Ph.D student at the department of Information Engineering, the Chinese University of Hong Kong (CUHK), supervised by Prof. Guoliang Xing. </p>
+                    <div class="social-icons">
+                        <a href="https://github.com/sxontheway">
+                            <i class="fab fa-github fa-3x"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/xian-shuai-213475156/">
+                          <i class="fab fa-linkedin-in fa-3x"></i>
+                        </a>
+                      </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -59,33 +67,17 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Doctor of Philosophy</h3>
-                            <div class="subheading mb-3">Supervisor: Prof. Sherman S.M. Chow</div>
+                            <div class="subheading mb-3">Supervisor: Prof. Guoliang Xing</div>
                             <p>Department of Information Engineering, The Chinese University of Hong Kong</p>
-                            <p>PhD Thesis Title: "Secure and More Practical Access Control Encryption"
-                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Augest 2015 - December 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Augest 2018 - December 2022 (expected)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Master of Science</h3>
-                            <p>Department of Computer Science, City University of Hong Kong</p>
+                            <h3 class="mb-0">Bechelor of Science</h3>
+                            <p>Physics, University of Science and Technology of China</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2013 - October 2014</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Bechelor of Engineering</h3>
-                            <p>Computer Science and Technology (Major), Southwest University</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2012</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Bachelor of Art</h3>
-                            <p>English Translation (Minor), Southwest University</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2009 - November 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2014 - June 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -97,23 +89,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <b>Xiuhua Wang</b>, Sherman S.M. Chow. Cross-Domain Access Control Encryption: Arbitrary-policy, Constant-size, Efficient. IEEE S&P 2021. 
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <b>Xiuhua Wang</b>, Harry W.H. Wong, Sherman S.M. Chow. Access Control Encryption from Group Encryption. ACNS 2021.
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cong Zhang, David Cash, <b>Xiuhua Wang</b>, Xiaoqi Yu, Sherman S.M. Chow. Combiners for Chosen-Ciphertext Security. COCOON 2016.
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Sherman S.M. Chow, Russell W.F. Lai, <b>Xiuhua Wang</b>, Yongjun Zhao. Privacy Preserving Credit System. NSS 2016.
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Tao Zhang, <b>Xiuhua Wang</b>, Sherman S.M. Chow. Privacy-Preserving Multi-Pattern Matching. SecureComm 2016.
+                            <u>Xian Shuai</u>, Yulin Shen, Yi Tang, Shuyao Shi, Luping Ji, Guoliang Xing. milliEye: A Lightweight mmWave Radar and Camera Fusion System for Robust Object Detection. <b>IoTDI '21.</b>
                         </li>
                     </ul>
                 </div>
@@ -133,7 +109,7 @@ Group Signatures, Privacy-Enhancing Technologies, Searchable Encryption, etc. </
 
              <hr class="m-0" />
             <!-- Employment-->
-            <section class="resume-section" id="employment">
+            <!-- <section class="resume-section" id="employment">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Employment</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -153,7 +129,7 @@ Group Signatures, Privacy-Enhancing Technologies, Searchable Encryption, etc. </
                         <div class="flex-shrink-0"><span class="text-primary">June 2014 - September 2014</span></div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <hr class="m-0" />
             <!-- Teaching Assistant-->
             <section class="resume-section" id="teaching">
