--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                         Room 727, SHB, CUHK · Hong Kong · (852) 54265745 ·
                         <a href="mailto:shuaixiannee@hotmail.com">shuaixiannee@hotmail.com</a>
                     </div>
-                    <p class="lead mb-5">I received my Bachelor degree from School of Physical Sciences, University of Science and Technology of China (USTC). Now, I am a Ph.D student at the department of Information Engineering, the Chinese University of Hong Kong (CUHK), supervised by Prof. Guoliang Xing. </p>
+                    <p class="lead mb-5">
+                    I am currently a Fourth year Ph.D student in <a href="http://aiot.ie.cuhk.edu.hk/" target="_blank" rel="noopener">AIoT Lab</a> at <a href="https://www.cuhk.edu.hk/chinese/index.html" target="_blank" rel="noopener">the Chinese University of Hong Kong (CUHK)</a>, advised by Professor Guoliang Xing. Before, I received my Bachelor degree from School of Physical Sciences, University of Science and Technology of China (USTC). Currently, I am conducting research on the Sensing and Computing for Embedded AI Systems.
+                    </p>
                     <div class="social-icons">
                         <a href="https://github.com/sxontheway">
                             <i class="fab fa-github fa-3x"></i>
@@ -70,7 +72,7 @@
                             <div class="subheading mb-3">Supervisor: Prof. Guoliang Xing</div>
                             <p>Department of Information Engineering, The Chinese University of Hong Kong</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Augest 2018 - December 2022 (expected)</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Augest 2018 - July 2022 (expected)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -78,6 +80,13 @@
                             <p>Physics, University of Science and Technology of China</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2014 - June 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Summer Semester</h3>
+                            <p>University of British Colombia (UBC)</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2016 - Augest 2016</span></div>
                     </div>
                 </div>
             </section>
