--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="google-site-verification" content="pMcHHGB98HZPcd6lADlO6CWPbSyqkjLIIST7bT_ysWM" />
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes, user-scalabel=yes"/>
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Xian Shuai's Website</title>
@@ -42,25 +42,52 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
 
-                    <h1 class="mb-0">
-                        Xian Shuai
-                        <span class="text-primary">&nbsp;&nbsp帅先</span>
-                    </h1>
-                    <div class="lead mb-5">
-                        (852) 54265745  · shuaixiannee at hotmail.com 
-                        <br>
-                        Room 727, SHB, CUHK, Hong Kong 
-                        <a href="mailto:shuaixiannee@hotmail.com">shuaixiannee@hotmail.com</a>
-                    </div>
-            
-                    <p class="lead mb-5">
-                    I am currently a fourth year Ph.D student in <a href="http://aiot.ie.cuhk.edu.hk/" target="_blank" rel="noopener">AIoT Lab</a> at <a href="https://www.cuhk.edu.hk/chinese/index.html" target="_blank" rel="noopener">the Chinese University of Hong Kong (CUHK)</a>, advised by Professor <a href="https://www.ie.cuhk.edu.hk/people/glxing.shtml" target="_blank" rel="noopener">Guoliang Xing</a>. Before, I got my Bachelor degree from School of Physics, <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">University of Science and Technology of China (USTC)</a> in 2018. My research interests lie in the Sensing and Computing for Embedded AI Systems. 
-                    <br><br>
-                    When I am free, I devote myself to improving my business acumen and studying fundamental driven investment approach towards equities. See my blogs and columns: <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>
-                    <br>
-                    I am also a part-time photographer. Click my gallery to have a look: <b><a href="http://sxontheway.lofter.com/" target="_blank" rel="noopener">Lofter</a></b>                  
-                    </p>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                    <td width="90%" valign="middle">
+                        <img src="img/photo0_small.jpg" width="250">
+                        <p>
 
+                        <h2 class="mb-0">
+                            Xian Shuai
+                            <span class="text-primary">&nbsp;&nbsp帅先</span>
+                        </h2>
+                        <div class="lead mb-5">
+                            <!-- (852) 54265745 <br>  -->
+                            shuaixiannee at hotmail.com <br>
+                            Room 727, SHB, CUHK, Hong Kong 
+                        </div>
+
+                        <p class="lead mb-5">
+                        I am currently a fourth year Ph.D student in <a href="http://aiot.ie.cuhk.edu.hk/" target="_blank" rel="noopener">AIoT Lab</a> at the Chinese University of Hong Kong <a href="https://www.cuhk.edu.hk/chinese/index.html" target="_blank" rel="noopener">(CUHK)</a>, advised by Professor <a href="https://www.ie.cuhk.edu.hk/people/glxing.shtml" target="_blank" rel="noopener">Guoliang Xing</a>. I got my Bachelor degree from School of Physics, University of Science and Technology of China <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">(USTC)</a> in 2018. My research interests lie in the Sensing and Computing for Embedded AI Systems. 
+                        <br><br>
+                        When I am free, I devote myself to improving my business acumen and studying fundamental driven investment approach towards equities. See my blogs and columns: <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>
+                        <br>
+                        I am also a part-time photographer. Click my gallery to have a look: <b><a href="http://sxontheway.lofter.com/" target="_blank" rel="noopener">Lofter</a></b>                  
+                        </p>
+
+                        <div class="social-icons">
+                            <a href="https://www.linkedin.com/in/xian-shuai-213475156/">
+                            <i class="fab fa-linkedin-in fa-2x"></i>
+                            </a>
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="mailto:shuaixiannee@hotmail.com">
+                                <i class="fas fa-envelope fa-2x"></i>
+                            </a>
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="https://github.com/sxontheway">
+                                <i class="fab fa-github fa-2x"></i>
+                            </a>
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EQKK9Fb011hAhktL4OklbP0B2-zV4wmKubHW79p0d6NKZg?e=qTTxPz">
+                                <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
+                            </a>
+                        </div>
+                    </td>
+                    <td width="20%" valign="middle">
+
+                    </td>
+                    </table>
+                      
                     <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td width="90%" valign="middle">
@@ -91,23 +118,6 @@
                         </tr>
                     </table> -->
 
-                    <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/xian-shuai-213475156/">
-                          <i class="fab fa-linkedin-in fa-2x"></i>
-                        </a>
-                        &nbsp;&nbsp;&nbsp;
-                        <a href="mailto:shuaixiannee@hotmail.com">
-                            <i class="fas fa-envelope fa-2x"></i>
-                        </a>
-                        &nbsp;&nbsp;&nbsp;
-                        <a href="https://github.com/sxontheway">
-                            <i class="fab fa-github fa-2x"></i>
-                        </a>
-                        &nbsp;&nbsp;&nbsp;
-                        <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EQKK9Fb011hAhktL4OklbP0B2-zV4wmKubHW79p0d6NKZg?e=qTTxPz">
-                            <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
-                        </a>
-                      </div>
                 </div>
             </section>
 
@@ -262,7 +272,7 @@
                     <b> Experience</b>
                     <ul>
                         <li>  
-                            2021-Present, Principal Researcher of <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Techology Limited</a>
+                            2021-Present, Technical Lead of <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Techology Limited</a>
                         </li>
                         <li>
                             May-July 2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener">CUHK Technology Commercialization Summer Camp  </a>
@@ -325,8 +335,9 @@
                             2021. The 7th Anhui Province College Students' “Internet+” Innovation and Entrepreneurship Competition. Silver Award. 
                             <!-- <a href="https://cyxy.cua.edu.cn/_upload/article/files/40/73/97df9a2d4f3b91f188eb11792c02/cdffa403-cd99-40f4-974f-98570d19e296.pdf" target="_blank" rel="noopener">(Link)</a> -->
                         </li>
-                        <li> 2018 - Present. Postgraduate Scholarship, the Chinese University of Hong Kong (CUHK). 
+                        <li> 
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
+                            2018 - Present. Postgraduate Scholarship, the Chinese University of Hong Kong (CUHK).
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
