--- a/index.html
+++ b/index.html
@@ -262,29 +262,30 @@
             <section class="resume-section" id="activities">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Activities</h2>
-                    <b>Conference Reviewer</b>
-                    <ul>
-                        <li>
-                            2022: INFOCOM, ICCCN 
-                        </li>
-                    </ul>
 
                     <b> Experience</b>
                     <ul>
                         <li>  
-                            2021-Present, Technical Lead of <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Techology Limited</a>
+                            2021-Present, Technical Lead of the startup <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Techology Limited</a>
                         </li>
                         <li>
                             May-July 2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener">CUHK Technology Commercialization Summer Camp  </a>
                         </li>
                         <li>
-                            2016-Present, Part-Time Contracted Photographer of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group Co., Ltd. </a>
+                            2016-Present, Part-Time Contracted Photographer of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group. </a>
                         </li>
                         <li>
                             2016-2018, Vice Leader, Photography Association of University of Science and Technology of China (USTC) 
                         </li>
                     </ul>
 
+                    <b>Conference Reviewer</b>
+                    <ul>
+                        <li>
+                            2022: INFOCOM, ICCCN 
+                        </li>
+                    </ul>
+                    
                     <b>Research Assistant</b>
                     <ul>
                         <li>
