--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p class="lead mb-5">
                         I am currently a fourth year Ph.D student in <a href="http://aiot.ie.cuhk.edu.hk/" target="_blank" rel="noopener">AIoT Lab</a> at the Chinese University of Hong Kong <a href="https://www.cuhk.edu.hk/chinese/index.html" target="_blank" rel="noopener">(CUHK)</a>, advised by Professor <a href="https://www.ie.cuhk.edu.hk/people/glxing.shtml" target="_blank" rel="noopener">Guoliang Xing</a>. I got my Bachelor degree from School of Physics, University of Science and Technology of China <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">(USTC)</a> in 2018. My research interests lie in the Sensing and Computing for Embedded AI Systems. 
                         <br><br>
-                        When I am free, I devote myself to improving my business acumen and studying fundamental driven investment approach towards equities. See my blogs and columns: <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>
+                        When I am free, I devote myself to developing my business sense and studying the fundamental-driven investment approach towards equities. See my blogs and articles: <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>
                         <br>
                         I am also a part-time photographer. Click my gallery to have a look: <b><a href="http://sxontheway.lofter.com/" target="_blank" rel="noopener">Lofter</a></b>                  
                         </p>
@@ -269,10 +269,10 @@
                             2021-Present, Technical Lead of the startup <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Techology Limited</a>
                         </li>
                         <li>
-                            May-July 2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener">CUHK Technology Commercialization Summer Camp  </a>
+                            May-July 2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener"> Technology Commercialization Summer Camp, CUHK  </a>
                         </li>
                         <li>
-                            2016-Present, Part-Time Contracted Photographer of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group. </a>
+                            2016-Present, Part-Time Contract Photographer of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group. </a>
                         </li>
                         <li>
                             2016-2018, Vice Leader, Photography Association of University of Science and Technology of China (USTC) 
