--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EQKK9Fb011hAhktL4OklbP0B2-zV4wmKubHW79p0d6NKZg?e=qTTxPz">
+                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EQKK9Fb011hAhktL4OklbP0B2-zV4wmKubHW79p0d6NKZg?e=eXHQ40">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
                             </a>
                         </div>
@@ -266,16 +266,16 @@
                     <b> Experience</b>
                     <ul>
                         <li>  
-                            2021-Present, Technical Lead of the startup <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Techology Limited</a>
+                            2021-Present, Technical Lead of the startup <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Technology Limited</a>
                         </li>
                         <li>
                             May-July 2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener"> Technology Commercialization Summer Camp, CUHK  </a>
                         </li>
                         <li>
-                            2016-Present, Part-Time Contract Photographer of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group. </a>
+                            2016-Present, Creative Contributor of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group. </a>
                         </li>
                         <li>
-                            2016-2018, Vice Leader, Photography Association of University of Science and Technology of China (USTC) 
+                            2016-2018, Associate Leader, Photography Association of University of Science and Technology of China (USTC) 
                         </li>
                     </ul>
 
