--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes, user-scalabel=yes"/>
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Xian Shuai's Website</title>
+        <title>Xian (Alex) Shuai's Website</title>
         <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -159,7 +159,7 @@
             <!-- Publication-->
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Selective Publications</h2>
+                    <h2 class="mb-5">Selected Publications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
