--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes, user-scalabel=yes"/>
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Xian (Alex) Shuai's Website</title>
+        <title>Xian (Alex) Shuai's Homepage</title>
         <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Xian Shuai</span>
+                <span class="d-block d-lg-none">Xian (Alex) Shuai</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/photo2_small.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -78,7 +78,7 @@
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EQKK9Fb011hAhktL4OklbP0B2-zV4wmKubHW79p0d6NKZg?e=eXHQ40">
+                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/Ec9hEdVWAStMgT67V0Jz5AsBmRIkGWYczUG8-3EKHSKIlQ?e=j6I7JL">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
                             </a>
                         </div>
@@ -269,7 +269,7 @@
                             2021-Present, Technical Lead of the startup <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Technology Limited</a>
                         </li>
                         <li>
-                            May-July 2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener"> Technology Commercialization Summer Camp, CUHK  </a>
+                            2021, Participate <a href="https://www.ie.cuhk.edu.hk/techcom-summer-camp/" target="_blank" rel="noopener"> Technology Commercialization Summer Camp, CUHK  </a>
                         </li>
                         <li>
                             2016-Present, Creative Contributor of <a href="https://www.vcg.com/" target="_blank" rel="noopener">Visual China Group. </a>
@@ -288,6 +288,9 @@
                     
                     <b>Research Assistant</b>
                     <ul>
+                        <li>
+                            2019, Shenzhen Institute of Artificial Intelligence and Robotics for Society (AIRS). 
+                        </li>
                         <li>
                             2017, Photoelectric System Lab, Institute of Semiconductors, China Academy of Sciences (CAS)
                         </li>
