--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <u>Xian Shuai</u>, Yulin Shen, Siyang Jiang, Zhihe Zhao, Zhenyu Yan, Guoliang Xing. BalanceFL: Addressing Class Imbalance in Long-Tail Federated Learning. <b>IPSN '22.</b>
+                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://gocuhk-my.sharepoint.com/:b:/g/personal/glxing_cuhk_edu_hk/EUUbknm-KyZKl-GtDjkbTtABBdfNg80LIdoalH9FLsitmw?e=S5d71R" target="_blank" rel="noopener">
+                                PDF
+                            </a>
                         </li>
                         <br>
                         <li>
