--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/Ec9hEdVWAStMgT67V0Jz5AsBmRIkGWYczUG8-3EKHSKIlQ?e=j6I7JL">
+                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EdIWAfi74zVEtSEuW3SVElYBlezovP6n2jaRuk0-qaiOeA?e=Jc3V1I">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
                             </a>
                         </div>
