--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EdIWAfi74zVEtSEuW3SVElYBlezovP6n2jaRuk0-qaiOeA?e=Jc3V1I">
+                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EZTZzF_sNadGl_mQoR0v51wBfR7wrSUDUBcmocQsFB2Rew?e=Ux0Qr4">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
                             </a>
                         </div>
@@ -213,7 +213,7 @@
                                 Department of Information Engineering, The Chinese University of Hong Kong
                             </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Augest 2018 - July 2022 (expected)</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Augest 2018 - Late 2022 (expected)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
