--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
-                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EZTZzF_sNadGl_mQoR0v51wBfR7wrSUDUBcmocQsFB2Rew?e=Ux0Qr4">
+                            <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EWH3UAZmeRhLohqP1mCjEVYBoFTs1V2OG_9E4T7wLhiYBQ?e=rfeKwZ">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
                             </a>
                         </div>
