--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <u>Xian Shuai</u>, Yulin Shen, Yi Tang, Shuyao Shi, Luping Ji, Guoliang Xing. milliEye: A Lightweight mmWave Radar and Camera Fusion System for Robust Object Detection. <b>IoTDI '21 
                             <a href="https://conferences.computer.org/iotDI/2021/index.html" target="_blank" rel="noopener">(Best Student Paper Award).</a></b>
-                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://dl.acm.org/doi/10.1145/3450268.3453532" target="_blank" rel="noopener">
+                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://www.researchgate.net/publication/351669682_milliEye_A_Lightweight_mmWave_Radar_and_Camera_Fusion_System_for_Robust_Object_Detection" target="_blank" rel="noopener">
                                 PDF
                             </a>
                         </li>
