--- a/index.html
+++ b/index.html
@@ -171,6 +171,14 @@
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Xiaomin OUYANG, <u>Xian Shuai</u>, Ivy Wang Shi, Jiayu Zhou, Jianwei Huang, Guoliang Xing. Cosmo: Contrastive Fusion Learning with Small Data for Multimodal Human Activity Recognition.  <b>MobiCom '22.</b>
+                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://sxontheway.github.io/" target="_blank" rel="noopener">
+                                PDF
+                            </a>
+                        </li>
+                        <br>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Zhihe Zhao, <u>Xian Shuai</u>, Yang Bai, Neiwen Ling, Nan Guan, Zhenyu Yan, Guoliang Xing. Moses: Efficient Exploitation of Cross-device Transferable Features for Tensor Program
                             Optimization.  <b>arXiv Preprint.</b>
                             &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://arxiv.org/abs/2201.05752" target="_blank" rel="noopener">
