--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script src="https://kit.fontawesome.com/5eabd12e87.js" crossorigin="anonymous"></script>
         <meta name="google-site-verification" content="pMcHHGB98HZPcd6lADlO6CWPbSyqkjLIIST7bT_ysWM" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes, user-scalabel=yes"/>
@@ -78,9 +79,13 @@
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
+                            <a href="https://www.zhihu.com/column/c_1320032999812370432">
+                                <i class="fa-brands fa-zhihu fa-2x"></i>
+                            </a>
+                            &nbsp;&nbsp;&nbsp;
                             <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EWH3UAZmeRhLohqP1mCjEVYBoFTs1V2OG_9E4T7wLhiYBQ?e=rfeKwZ">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
-                            </a>
+                            </a>  
                         </div>
                     </td>
                     <td width="20%" valign="middle">
@@ -167,12 +172,16 @@
                             &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://conferences.computer.org/cpsiot/pdfs/IPSN2022-6R1M30NXCSXmbVKUqzz1Of/962400a259/962400a259.pdf" target="_blank" rel="noopener">
                                 PDF
                             </a>
+                            
+                            <!-- &nbsp <a class="btn btn-outline-primary btn-sm" href="https://conferences.computer.org/cpsiot/pdfs/IPSN2022-6R1M30NXCSXmbVKUqzz1Of/962400a259/962400a259.pdf" target="_blank" rel="noopener">
+                                Code
+                            </a> -->
                         </li>
                         <br>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Xiaomin OUYANG, <u>Xian Shuai</u>, Ivy Wang Shi, Jiayu Zhou, Jianwei Huang, Guoliang Xing. Cosmo: Contrastive Fusion Learning with Small Data for Multimodal Human Activity Recognition.  <b>MobiCom '22.</b>
-                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://sxontheway.github.io/" target="_blank" rel="noopener">
+                            &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://sxontheway.github.io/others/Cosmo-mobicom22-final.pdf" target="_blank" rel="noopener">
                                 PDF
                             </a>
                         </li>
@@ -193,6 +202,9 @@
                             &nbsp;&nbsp<a class="btn btn-outline-primary btn-sm" href="https://www.researchgate.net/publication/351669682_milliEye_A_Lightweight_mmWave_Radar_and_Camera_Fusion_System_for_Robust_Object_Detection" target="_blank" rel="noopener">
                                 PDF
                             </a>
+                            <!-- &nbsp <a class="btn btn-outline-primary btn-sm" href="https://conferences.computer.org/cpsiot/pdfs/IPSN2022-6R1M30NXCSXmbVKUqzz1Of/962400a259/962400a259.pdf" target="_blank" rel="noopener">
+                                Code
+                            </a> -->
                         </li>
                         <br>
                         <li>
