--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     <b> Experience</b>
                     <ul>
                         <li>  
-                            2022.07-2022.10, Investor Intern at <a href="https://www.5ycap.com/en/" target="_blank" rel="noopener">5Y Capital</a>, Investigating AIGC
+                            2022.07-2022.10, Investor Intern at <a href="https://www.5ycap.com/" target="_blank" rel="noopener">5Y Capital</a>, Investigating AIGC
                         </li>
                         <li>  
                             2021-2022, Part-time Researcher at the Startup <a href="http://thingx-tech.com/" target="_blank" rel="noopener">ThingX Technology</a>
@@ -305,11 +305,14 @@
                         </li>
                     </ul>
 
-                    <b>Conference Reviewer</b>
+                    <b>Conference/Journal Reviewer</b>
                     <ul>
                         <li>
-                            2022: INFOCOM, ICCCN 
+                            2023: IEEE Transactions on Intelligent Vehicles  
                         </li>
+                        <li>
+                            2022: IEEE INFOCOM, ICCCN 
+                        </li>                        
                     </ul>
                     
                     <b>Research Assistant</b>
@@ -364,7 +367,7 @@
                         </li>
                         <li> 
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
-                            2018 - Present. Postgraduate Scholarship, the Chinese University of Hong Kong (CUHK).
+                            2018 - 2022. Postgraduate Scholarship, the Chinese University of Hong Kong (CUHK).
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning fa-1x"></i></span>
