--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="lead mb-5">
                             <!-- (852) 54265745 <br>  -->
                             shuaixiannee at hotmail.com <br>
-                            Room 727, SHB, CUHK, Hong Kong 
+                            8/F, Bio-Informatics Centre, Hong Kong Science Park
                         </div>
 
                         <p class="lead mb-5">
@@ -69,25 +69,29 @@
                         </p>
 
                         <div class="social-icons">
-                            <a href="https://www.linkedin.com/in/xian-shuai-213475156/">
-                            <i class="fab fa-linkedin-in fa-2x"></i>
-                            </a>
-                            &nbsp;&nbsp;&nbsp;
                             <a href="mailto:shuaixiannee@hotmail.com">
                                 <i class="fas fa-envelope fa-2x"></i>
+                            </a>
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="https://www.linkedin.com/in/xian-shuai-213475156/">
+                            <i class="fab fa-linkedin-in fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
                             <a href="https://github.com/sxontheway">
                                 <i class="fab fa-github fa-2x"></i>
                             </a>
                             &nbsp;&nbsp;&nbsp;
+                            <a href="https://scholar.google.com/citations?user=PBfBNCkAAAAJ&hl=zh-CN">
+                                <i class="fa-brands fa-google fa-2x"></i>
+                            </a>
+                            &nbsp;&nbsp;&nbsp;
                             <a href="https://www.zhihu.com/column/c_1320032999812370432">
                                 <i class="fa-brands fa-zhihu fa-2x"></i>
                             </a>
-                            &nbsp;&nbsp;&nbsp;
+                            <!-- &nbsp;&nbsp;&nbsp;
                             <a href="https://mycuhk-my.sharepoint.com/:b:/g/personal/1155118647_link_cuhk_edu_hk/EWH3UAZmeRhLohqP1mCjEVYBoFTs1V2OG_9E4T7wLhiYBQ?e=e3B8og">
                                 <i class="fas fa-arrow-alt-circle-down fa-2x"></i>CV 
-                            </a>  
+                            </a>   -->
                         </div>
                     </td>
                     <td width="20%" valign="middle">
