--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                         </div>
 
                         <p class="lead mb-5">
-                        I am currently a researcher at Huawei Noah's Ark Lab, conducting research on <b>foundation models and AIGC</b>. 
+                        I am currently a researcher at Huawei Noah's Ark Lab, conducting research on <b>foundation models and AI agent</b>. 
                         <br><br>
                         From 2018 to 2022, I spent four years at the Chinese University of Hong Kong <a href="https://www.cuhk.edu.hk/chinese/index.html" target="_blank" rel="noopener">(CUHK)</a> to obtain my Ph.D. degree, under the supervision of Professor <a href="https://www.ie.cuhk.edu.hk/people/glxing.shtml" target="_blank" rel="noopener">Guoliang Xing (IEEE Fellow)</a>. During Ph.D., my research interests lie in the <b>Sensing and Computing for Edge AI Systems</b>. I got my Bachelor degree from School of Physics, University of Science and Technology of China <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">(USTC)</a> in 2018.
                         <br><br>
-                        When I am free, I devote myself to developing my business sense and studying the fundamental-driven investment approach towards equities. See my blogs and articles: <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>
+                        When I have free time, I enjoy studying business models across various industries and researching how to invest based on fundamental analysis. Some of my random thoughts can be found in the <b><a href="https://xueqiu.com/9565582768/column" target="_blank" rel="noopener">雪球专栏</a></b>, <b><a href="https://www.zhihu.com/column/c_1320032999812370432" target="_blank" rel="noopener">知乎专栏</a></b>
                         <br>
                         I am also a part-time photographer. Click my gallery to have a look: <b><a href="http://sxontheway.lofter.com/" target="_blank" rel="noopener">Lofter</a></b>                  
                         </p>
@@ -171,6 +171,12 @@
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Selected Publications</h2>
+                    Full list in Google Scholar: 
+                    <a href="https://scholar.google.com/citations?user=PBfBNCkAAAAJ&hl=zh-CN">
+                        <i class="fa-brands fa-google fa-1x"></i>
+                    </a>
+                    <br><br>
+
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
